refactor: 로그인 JWT 방식으로 변경

--- a/.env
+++ b/.env
@@ -12,5 +12,5 @@ API_VERSION=v1
 # FIREBASE_PROJECT_ID=your_project_id
 
 # 보안
-# SECRET_KEY=your-django-secret-key
+SECRET_KEY=django-insecure-+nh8%c1cmeq38!*1u@#%l^e+pue(_uokwe+2xojwq)k6=h=q1a
 # JWT_SECRET=your-jwt-secret
