refactor: 서버api를 활용하여 프론트엔드 UI 데이터 띄우기

--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@ API_BASE_URL=http://127.0.0.1:8000
 API_VERSION=v1
 
 # 외부 서비스
-# GOOGLE_MAPS_API_KEY=your_key_here
-# FIREBASE_PROJECT_ID=your_project_id
+KAKAO_NATIVEAPP_KEY=439f382f0c42cd2955205638b9cd45f2
+KAKAO_JAVASCRIPT_KEY=a3d4830e294771da5e8e481f5ebdd21b
 
 # 보안
 SECRET_KEY=django-insecure-+nh8%c1cmeq38!*1u@#%l^e+pue(_uokwe+2xojwq)k6=h=q1a
